test/scripted/compilation/errors/int_literal_too_large.bnj
# test:subtest
# test:error 9:18 "integer literal does not fit into any integer type"
# test:error 10:18 "integer literal does not fit into any integer type"
# test:error 11:18 "integer literal does not fit into any integer type"
# test:error 12:18 "integer literal does not fit into any integer type"
# test:error 13:18 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = 184467440737095516150;
    var b: u64 = 28446744073709551615;
    var c: u64 = 18446744083709551615;
    var d: u64 = 18446744073709551616;
    var e: u64 = -18446744073709551616;
}

# test:subtest
# test:error 21:18 "integer literal does not fit into any integer type"
# test:error 22:18 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = 0xFFFFFFFFFFFFFFFF0;
    var b: u64 = -0xFFFFFFFFFFFFFFFF0;
}

# test:subtest
# test:error 30:18 "integer literal does not fit into any integer type"
# test:error 31:18 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = 0b11111111111111111111111111111111111111111111111111111111111111110;
    var b: u64 = -0b11111111111111111111111111111111111111111111111111111111111111110;
}

# test:subtest
# test:error 40:18 "integer literal does not fit into any integer type"
# test:error 41:18 "integer literal does not fit into any integer type"
# test:error 42:18 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = 0o17777777777777777777770;
    var b: u64 = 0o2777777777777777777777;
    var c: u64 = -0o2777777777777777777777;
}

# test:subtest
# test:error 49:19 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = --0x1FFFFFFFFFFFFFFFF;
}

# test:subtest
# test:error 56:18 "integer literal does not fit into any integer type"

func main() {
    var a: u64 = 0x00001FFFFFFFFFFFFFFFF;
}
